<resources>
    <string name="version"> pre 2.0.0 candidate 4</string>
    <string name="app_name">Bear Console</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="action_settings">Application Settings</string>
    <string name="bluetooth_device">bluetooth Device</string>
    <string name="altimeter_outputs">Altimeter Outputs</string>
    <string name="altimeter_config">Altimeter Config</string>
    <string name="main_altitude">Main altitude</string>
    <string name="output_1">Output 1</string>
    <string name="delay1">Delay 1 (ms)</string>
    <string name="output_2">Output 2</string>
    <string name="delay2">Delay 2 (ms)</string>
    <string name="output_3">Output 3</string>
    <string name="delay3">Delay 3 (ms)</string>
    <string name="output_4">Output 4</string>
    <string name="delay4">Delay 4 (ms)</string>
    <string name="upload">Upload</string>
    <string name="dismiss_config">Dismiss</string>
    <string name="main_config">Main</string>
    <string name="drogue_config">Drogue</string>
    <string name="timer_config">Timer</string>
    <string name="disabled_config">Disabled</string>
    <string name="landing_config">Landing</string>
    <string name="liftoff_config">Liftoff</string>
    <string name="altitude_config">Altitude</string>
    <string name="altitude1">Altitude 1 (meters)</string>
    <string name="altitude2">Altitude 2 (meters)</string>
    <string name="altitude3">Altitude 3 (meters)</string>
    <string name="altitude4">Altitude 4 (meters)</string>
    <string name="main_altitude_tooltip">Enter the altitude for the main chute</string>
    <string name="OutDelay1_tooltip">Enter the firing delay in ms for the 1st output</string>
    <string name="OutDelay2_tooltip">Enter the firing delay in ms for the 2nd output</string>
    <string name="OutDelay3_tooltip">Enter the firing delay in ms for the 3rd output</string>
    <string name="OutDelay4_tooltip">Enter the firing delay in ms for the 4th output</string>
    <string name="txtOut1_tooltip">Choose what you want to do with the 1st output</string>
    <string name="txtOut2_tooltip">Choose what you want to do with the 2nd output</string>
    <string name="txtOut3_tooltip">Choose what you want to do with the 3rd output</string>
    <string name="txtOut4_tooltip">Choose what you want to do with the 4th output</string>
    <string name="txtViewBaudRate_tooltip">Choose the altimeter baud rate. Be carefull you might not be able to communicate</string>
    <string name="editTxtApogeeMeasures_tooltip">Number of measures to determine the apogee</string>
    <string name="txtViewAltimeterResolution_tooltip">Choose the altimeter resolution. The faster you rocket goes the lower it has to be</string>
    <string name="txtViewEEpromSize_tooltip">Choose the altimeter eeprom size depending on which eeprom is used</string>
    <string name="txtViewRecordTemp_tooltip">Choose if you want to record the temperature</string>
    <string name="EndRecordAltitude_tooltip">At which altitude do you consider that we have landed</string>
    <string name="LiftOffAltitude_tooltip">At which altitude do you consider that we have lift off</string>
    <string name="txtViewBatteryType_tooltip">Enter battery type used to make sure that we do not discharge it too much</string>
    <string name="txtAltiUnit_tooltip">Choose the altitude units you are familiar with</string>
    <string name="editTxtBipFreq_tooltip">Choose the beeping frequency in Hz</string>
    <string name="altimeter_config_tab2">Altimeter Config</string>
    <string name="baudRate">Baud Rate</string>
    <string name="apogeeMeasures">Apogee Measures</string>
    <string name="altimeterResolution">Altimeter Res</string>
    <string name="eepromSize">EEprom Size</string>
    <string name="beepOnOff">Beep On/Off</string>
    <string name="RecordTemp">Record temp</string>
    <string name="SupersonicDelay">Supersonic delay</string>
    <string name="EndRecordAltitude">End of rec Altitude</string>
    <string name="LiftOffAltitude">Lift Off Altitude</string>
    <string name="BatteryType">Battery Type</string>
    <string name="config_unknown">unknown</string>
    <string name="config_on">On</string>
    <string name="config_off">Off</string>
    <string name="altimeter_config_tab3">Altimeter Config</string>
    <string name="alti_name">Alti Name</string>
    <string name="units">Units</string>
    <string name="bip_mode">Beep mode</string>
    <string name="beep_freq">Beep freq</string>
    <string name="servo_stay_on">Servo Stay On</string>
    <string name="unit_meter">Meters</string>
    <string name="unit_feet">Feets</string>
    <string name="servos_config">Servos Config</string>
    <string name="servo1_off_pos">Servo1 off pos</string>
    <string name="servo1_on_pos">Servo1 on pos</string>
    <string name="servo2_off_pos">Servo2 off pos</string>
    <string name="servo2_on_pos">Servo2 on pos</string>
    <string name="servo3_off_pos">Servo3 off pos</string>
    <string name="servo3_on_pos">Servo3 on pos</string>
    <string name="servo4_off_pos">Servo4 off pos</string>
    <string name="servo4_on_pos">Servo4 on pos</string>
    <string name="config_no">No</string>
    <string name="config_yes">Yes</string>
    <string name="altimeter_settings">Altimeter\nSettings</string>
    <string name="continuity_on_off">Continuity\nOn/Off</string>
    <string name="read_flights">Flights</string>
    <string name="reset_settings">Reset\nsettings</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect</string>
    <string name="telemetry">Telemetry</string>
    <string name="select_device_to_use">Select Device to use</string>
    <string name="show_paired_devices">Show Paired Devices</string>
    <string name="altitude_time">Altitude / Time</string>
    <string name="close">Close</string>
    <string name="dismiss_reset">Dismiss</string>
    <string name="clear_flights">Clear Flights</string>
    <string name="reset_msg1">You are about to erase all flight data, are you sure you want to do it?</string>
    <string name="reset_msg2">You are about to reset your altimeter config, are you sure you want to do it?</string>
    <string name="reset_msg3">You are about to erase your last flight, are you sure you want to do it?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="BT_msg1">Bluetooth Device Not Available</string>
    <string name="BT_msg2">No Paired Bluetooth Devices Found.</string>
    <string name="MS_msg1">Connecting...</string>
    <string name="MS_msg2">Please wait!!!</string>
    <string name="MS_msg3">Connection Failed. Is it a SPP Bluetooth? Try again.</string>
    <string name="MS_msg4">Connected.</string>
    <string name="those_functions_will_reset_the_altimeter">Those functions will reset the altimeter</string>
    <string name="restore_alti_config">Restore Alti config</string>
    <string name="Flight_list">Flight List</string>
    <string name="title_activity_flight_list">Flight List</string>
    <string name="dismiss_flight_list">Dismiss</string>
    <string name="about_screen">About</string>
    <string name="bear_console_version">Bear Console version</string>
    <string name="dismiss_about">Dismiss</string>
    <string name="credit_goes_to_philippe_huguenin_bergenat_n_for_all_the_testing">Credit goes to Philippe Huguenin-Bergenat \n for all the testing</string>
    <string name="msg1">Only one main is allowed. Please review your config</string>
    <string name="msg2">Only one Drogue is allowed. Please review your config</string>
    <string name="msg3">Config successfully uploaded</string>
    <string name="msg4">Failed to upload config</string>
    <string name="msg5">Retrieving Altimeter config...</string>
    <string name="msg6">Please wait!!!</string>
    <string name="msg7">Retrieving flights...</string>
    <string name="msg8">Please wait!!!</string>
    <string name="msg9">You have changed the baud rate, the altimeter might not be able to connect. Are you sure?</string>
    <string name="Meters_fview">Meters</string>
    <string name="Feet_fview">Feet</string>
    <string name="Altitude_time">Altitude / Time</string>
    <string name="Time_fv">Time (ms)</string>
    <string name="Altitude">Altitude</string>
    <string name="dismiss_flight_list_view">Dismiss</string>
    <string name="titre_application_pref">Application preferences</string>
    <string name="save_config">Save</string>
    <string name="dismiss_app_config">Dismiss</string>
    <string name="application_langage_config">Application langage</string>
    <string name="graph_color_config">Graph color</string>
    <string name="application_units_config">Application Units</string>
    <string name="graph_back_color_config">Graph back color</string>
    <string name="default_config">Default</string>
    <string name="font_size">Font Size</string>
    <string name="title_activity_settings">Settings</string>
    <string name="baud_rate">Baud Rate</string>
    <string name="connection_type">Connection Type</string>
    <string name="graphiclib_type">Graphics lib </string>
    <string name="MultipleMainDrogue">Multiple Main/drogue</string>
    <string name="FullUSBSupport">Full USB Support</string>
    <string name="color_black">BLACK</string>
    <string name="color_white">WHITE</string>
    <string name="color_magenta">MAGENTA</string>
    <string name="color_blue">BLUE</string>
    <string name="color_yellow">YELLOW</string>
    <string name="color_green">GREEN</string>
    <string name="color_gray">GRAY</string>
    <string name="color_cyan">CYAN</string>
    <string name="color_dkgray">DKGRAY</string>
    <string name="color_ltgray">LTGRAY</string>
    <string name="color_red">RED</string>
    <string name="phone_english">English</string>
    <string name="phone_french">French</string>
    <string name="phone_language">Phone language</string>
    <string name="config_unit_meters">Meters</string>
    <string name="config_unit_feet">Feet</string>
    <string name="general_config">General</string>
    <string name="telemetry_config">Telemetry config</string>
    <string name="main_event">Main event</string>
    <string name="apogee_altitude_event">Apogee altitude</string>
    <string name="main_altitude_event">Main altitude</string>
    <string name="drogue_event">Drogue event</string>
    <string name="altitude_event">Altitude event</string>
    <string name="altimeter_status">Altimeter status</string>
    <string name="altimeter_status_disabled">Disabled</string>
    <string name="altimeter_status_output_1">Output 1</string>
    <string name="altimeter_status_output_2">Output 2</string>
    <string name="altimeter_status_output_3">Output 3</string>
    <string name="altimeter_status_output_4">Output 4</string>
    <string name="altimeter_status_current_altitude">Current altitude</string>
    <string name="altimeter_status_battery_voltage">Battery voltage</string>
    <string name="altimeter_status_link_type">Link type</string>
    <string name="altimeter_status_bluetooth">Bluetooth</string>
    <string name="status_msg1">Fire Altimeter outputs \nMake sure that you do not have \n any real pyro charges!!!</string>
    <string name="temperature">Temperature</string>
    <string name="switch_output_1">Output 1</string>
    <string name="switch_output_2">Output 2</string>
    <string name="switch_output_3">Output 3</string>
    <string name="switch_output_4">Output 4</string>
    <string name="flight">Flight</string>
    <string name="flight_info">Flight Info</string>
    <string name="apogee_altitude">Apogee Altitude</string>
    <string name="max_velocity">Max Velocity</string>
    <string name="main_alti">Main Altitude</string>
    <string name="_3dr_settings">3DR settings...</string>
    <string name="bt_settings">BT settings...</string>
    <string name="delete_last_flight">Delete Last Flight</string>
</resources>