<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.altimeter.bdureau.bearconsole.connection.SearchBluetooth">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_mod3dr_settings"
        android:orderInCategory="100"
        android:title="@string/_3dr_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_modbt_settings"
        android:orderInCategory="100"
        android:title="@string/bt_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_modlora_settings"
        android:orderInCategory="100"
        android:title="Lora settings..."
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/help"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_bluetooth"
        android:orderInCategory="100"
        android:title="@string/bluetooth_device"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_test_connection"
        android:orderInCategory="100"
        android:title="Test connection"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>
