<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AltimeterStatus">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/altimeter_status"
        android:id="@+id/txtViewTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/altimeter_status_output_1"
        android:id="@+id/txtViewOutput1"
        android:layout_below="@+id/txtViewTitle"
        android:layout_alignParentLeft="true"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtViewOutput1Status"
        android:text="@string/altimeter_status_disabled"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtViewTitle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/altimeter_status_output_2"
        android:id="@+id/txtViewOutput2"
        android:layout_below="@+id/txtViewOutput1"
        android:layout_alignParentLeft="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtViewOutput2Status"
        android:text="Disabled"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtViewOutput1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/altimeter_status_output_3"
        android:id="@+id/txtViewOutput3"
        android:layout_below="@+id/txtViewOutput2"
        android:layout_alignParentLeft="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtViewOutput3Status"
        android:text="Disabled"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtViewOutput2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/altimeter_status_output_4"
        android:id="@+id/txtViewOutput4"
        android:layout_below="@+id/txtViewOutput3"
        android:layout_alignParentLeft="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtViewOutput4Status"
        android:text="Disabled"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtViewOutput3"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/altimeter_status_current_altitude"
        android:id="@+id/txtViewCurrentAltitude"
        android:layout_below="@+id/txtViewOutput4"
        android:layout_alignParentLeft="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtViewAltitude"
        android:text="0"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtViewOutput4"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/altimeter_status_battery_voltage"
        android:id="@+id/txtViewBatteryVoltage"
        android:layout_below="@+id/txtViewCurrentAltitude"
        android:layout_alignParentLeft="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtViewVoltage"
        android:text="0"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtViewCurrentAltitude"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/altimeter_status_link_type"
        android:id="@+id/txtViewLinkType"
        android:layout_below="@+id/txtViewBatteryVoltage"
        android:layout_alignParentLeft="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtViewLink"
        android:text="@string/altimeter_status_bluetooth"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtViewBatteryVoltage"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dismiss_about"
        android:id="@+id/butDismiss"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>