<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <TextView
        android:id="@+id/txtViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/altimeter_status"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/txtViewTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtViewTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/status_msg1"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp" />
    <Switch
        android:id="@+id/switchOutput1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtViewTitle2"
        android:layout_marginEnd="61dp"
        android:layout_marginRight="61dp"
        android:text="@string/switch_output_1" />
    <Switch
        android:id="@+id/switchOutput2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/switchOutput1"
        android:layout_marginEnd="61dp"
        android:layout_marginRight="61dp"
        android:text="@string/switch_output_2" />

    <Switch
        android:id="@+id/switchOutput3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/switchOutput2"
        android:layout_marginEnd="61dp"
        android:layout_marginRight="61dp"
        android:text="@string/switch_output_3" />
    <Switch
        android:id="@+id/switchOutput4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/switchOutput3"
        android:layout_marginEnd="61dp"
        android:layout_marginRight="61dp"
        android:text="@string/switch_output_4" />


</RelativeLayout>